--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -3,7 +3,7 @@
 /* Body styling for the main page */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  /* Set general font family */
-    background: linear-gradient(135deg, #f8f9fb, #e8ecf4);         /* Soft gradient background */
+    background: radial-gradient(circle, #e8ecf4 100%, #f8f9fb 100%);;         /* Soft gradient background */
     color: #2c3e50;                                                /* Text color */
     margin: 0;
     padding: 0;
@@ -136,4 +136,19 @@ select {
     display: flex;                       /* Flexbox layout */
     align-items: center;                 /* Center items vertically */
     gap: 0.5rem;                         /* Small gap between items */
+}
+
+.input-group input {
+    width: 80px;     /* or try 60px if you want even smaller */
+    padding: 4px 6px;
+    font-size: 1rem;
+}
+
+.close-button {
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.close-button button{
+    background-color: #d63031; 
 }
